// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 eystmn Button__StyledControl-sc-160jtek-2 lnCScf"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hSyGNu Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 eystmn Button__StyledControl-sc-160jtek-2 lnCScf"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 fwKDKY Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 gZZzjI Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jgKHQx Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 iujMfp Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 jvMhsq"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dHYHCk Button__StyledBox-sc-160jtek-0 icBnSJ"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jgKHQx Button__StyledControl-sc-160jtek-2 kKngQa"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 QqhvF Button__StyledLoadingIndicator-sc-160jtek-1 kHyGFc"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
